update for inverse queries and usage of defaults
